--- a/components/webcompat_exceptions/BUILD.gn
+++ b/components/webcompat_exceptions/BUILD.gn
@@ -7,6 +7,8 @@ import("//brave/build/config.gni")
 
 source_set("core") {
   sources = [
+    "features.cc",
+    "features.h",
     "webcompat_exceptions_service.cc",
     "webcompat_exceptions_service.h",
   ]
