fix brave_browser_test missing dependency

--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -904,6 +904,7 @@ test("brave_browser_tests") {
     "//brave/components/speedreader/common/buildflags",
     "//brave/components/tor/buildflags",
     "//brave/components/url_sanitizer/browser",
+    "//brave/components/webcompat:core",
     "//brave/renderer/skus:browser_tests",
     "//brave/renderer/test:browser_tests",
     "//brave/third_party/blink/renderer:renderer",
