--- a/components/webcompat/content/browser/BUILD.gn
+++ b/components/webcompat/content/browser/BUILD.gn
@@ -7,6 +7,7 @@ import("//brave/build/config.gni")
 
 source_set("browser") {
   sources = [
+    "webcompat_exceptions_observer.h",
     "webcompat_exceptions_service.cc",
     "webcompat_exceptions_service.h",
   ]
