--- a/components/webcompat/core/browser/BUILD.gn
+++ b/components/webcompat/core/browser/BUILD.gn
@@ -7,15 +7,19 @@ import("//brave/build/config.gni")
 
 source_set("browser") {
   sources = [
-    "webcompat_settings_cleaning_service.cc",
-    "webcompat_settings_cleaning_service.h",
+    "webcompat_exceptions_observer.h",
+    "webcompat_exceptions_service.cc",
+    "webcompat_exceptions_service.h",
   ]
 
   deps = [
     "//base",
-    "//brave/components/webcompat/content/browser",
-    "//components/content_settings/core/browser:browser",
-    "//components/content_settings/core/common:common",
-    "//content/public/browser",
+    "//brave/components/brave_component_updater/browser",
+    "//components/content_settings/core/common",
+    "//components/keyed_service/core",
+    "//components/prefs",
+    "//components/user_prefs",
+    "//net",
+    "//url",
   ]
 }
